@@ -96,9 +96,10 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-30 14:36:47 L.92 '33793 T830558811 .K ~858 +----+----+----+----+----+
-     TimeCnt : //z 2015-09-30 14:05:43 L.92 '35657 T826965107 .K ~46  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33  +----+----+----+----+----+
+     Zndex_E : //z 2015-10-06 00:21:08 L.86 '85132 T173268648 .K ~869 +----+----+----+----+----+
+     TimeCnt : //z 2015-10-05 21:05:30 L.87 '10470 T732247271 .K ~47  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~34  +----+----+----+----+----+
+     #34  R+ : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~34    V+.893  L+.950  
      #33  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33    V+.865  L+.924  
      #32  R+ : //z 2015-09-29 00:25:55 L.93 '84845 T2957396635.K ~32    V+.816  L+.888  
      #31  R+ : //z 2015-09-29 00:10:42 L.93 '85758 T2956030993.K ~31    V+.809  L+.858  
@@ -136,7 +137,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-30 14:36:47 L.92 '33793 T830558811 .K ~891   R+.28   L+.813  --+----+
+     Version : //z 2015-10-06 00:21:08 L.86 '85132 T173268648 .K ~903   R+.34   L+.955  --+----+
+     #47  R+ : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~893   R+.34   L+.951  V+.893  
      #46  V+ : //z 2015-09-30 11:05:33 L.92 '46467 T1247528463.K ~874   R+.33   L+.931  
      #45  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~865   R+.33   L+.925  V+.865  
      #45  V+ : //z 2015-09-29 17:35:28 L.93 '23072 T3077693668.K ~855   R+.32   L+.916  
@@ -943,3 +945,12 @@ http://gna.org/projects/cal3d/
 Tools, tools, tools 关于图形学的一些工具
 http://www.realtimerendering.com/blog/tag/directcompute/
 #endregion //z 2015-09-30 11:02:00 L.92 '46680 BG57IV3@XCL T1247420550.K.F4146951713-+----+----+
+
+#region 10-05 21:05 R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
+//z 2015-10-05 21:05:30 L.87 '10470 T732247271 .K[T47,L950,R34,V895]
+01. 
+
+车架参数：
+1、中管选用31.8合适最常用的前拔口径，安装更方便
+2、座杆适用27.2的管径
+#endregion //z 2015-10-05 21:05:28 L.87 '10472 BG57IV3@BYH T732247246 .K.F4146951713-+----+----+
